<resources>
    <string name="app_name">Inventory App</string>
    <string name="number_of_rows">Number of Rows</string>

    <!-- Inventory Overview -->
    <string name="inventory_overview">Inventory Overview</string>
    <string name="hint_product_name">Product Name</string>
    <string name="hint_product_price">Product Price</string>
    <string name="hint_product_quantity">Quantity</string>

    <!-- Supplier Overview -->
    <string name="supplier_overview">Supplier Overview</string>
    <string name="hint_supplier_name">Supplier Name</string>
    <string name="hint_supplier_number">Supplier Number</string>

    <!-- Menu Actions -->
    <string name="action_save_data">Save Data</string>
    <string name="action_insert_dummy_data">Insert Dummy Data</string>
    <string name="action_delete_all_entries">Delete All Entries</string>

    <string name="list_price">$</string>
    <string name="list_quantity">Quantity: </string>

    <string name="action_save">Save</string>
    <string name="action_delete">Delete</string>

    <!-- Empty View Strings -->
    <string name="empty_view_title_text">Seems empty in here...</string>
    <string name="empty_view_subtitle_text">Get started by adding a product</string>

    <string name="unknown_supplier">Unknown Supplier</string>

    <string name="detail_activity_title_new_inventory">Add a Product</string>
    <string name="detail_activity_title_edit_product">Edit a Product</string>
    <string name="detail_insert_product_failed">Error with saving product</string>
    <string name="detail_insert_product_successful">Product Saved</string>
    <string name="detail_update_product_failed">Error with updating product</string>
    <string name="detail_update_product_successful">Product updated</string>
    <string name="detail_delete_product_failed">Error with deleting product</string>
    <string name="detail_delete_product_successful">Product deleted</string>

    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>
    <string name="discard">Discard</string>
    <string name="keep_editing">Keep Editing</string>
    <string name="delete_dialog_msg">Delete this product?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>

</resources>
